[gd_scene load_steps=6 format=2]

[ext_resource path="res://ui/buttons.tscn" type="PackedScene" id=1]
[ext_resource path="res://ui/hud.gd" type="Script" id=2]
[ext_resource path="res://ui/buttons_font.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/ui/enemy-icon.png" type="Texture" id=4]
[ext_resource path="res://assets/ui/heart-icon.png" type="Texture" id=5]

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="Buttons" parent="." instance=ExtResource( 1 )]
margin_left = -1.0
margin_top = 8.0
margin_bottom = 8.0

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 8.0
margin_top = 8.0
margin_right = 92.0
margin_bottom = 24.0
mouse_filter = 2
custom_constants/separation = 16

[node name="LifeContainer" type="MarginContainer" parent="HBoxContainer"]
margin_right = 70.0
margin_bottom = 32.0
rect_min_size = Vector2( 70, 0 )
mouse_filter = 2

[node name="LifeIcon" type="TextureRect" parent="HBoxContainer/LifeContainer"]
margin_right = 70.0
margin_bottom = 32.0
rect_min_size = Vector2( 40, 16 )
mouse_filter = 2
texture = ExtResource( 5 )
stretch_mode = 3

[node name="Label" type="Label" parent="HBoxContainer/LifeContainer/LifeIcon"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -33.0
margin_top = -10.5
margin_bottom = 10.5
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 3 )
text = "999"
align = 1
valign = 1

[node name="EnemysContainer" type="MarginContainer" parent="HBoxContainer"]
margin_left = 86.0
margin_right = 156.0
margin_bottom = 32.0
rect_min_size = Vector2( 70, 32 )
mouse_filter = 2

[node name="EnemysIcon" type="TextureRect" parent="HBoxContainer/EnemysContainer"]
margin_right = 70.0
margin_bottom = 32.0
rect_min_size = Vector2( 40, 16 )
mouse_filter = 2
texture = ExtResource( 4 )
stretch_mode = 3

[node name="Label" type="Label" parent="HBoxContainer/EnemysContainer/EnemysIcon"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -33.0
margin_top = -10.5
margin_bottom = 10.5
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 3 )
text = "999"
align = 1
valign = 1

[connection signal="bomb_pressed" from="Buttons" to="." method="_on_VBoxContainer_bomb_pressed"]
[connection signal="cannon_pressed" from="Buttons" to="." method="_on_VBoxContainer_cannon_pressed"]
[connection signal="missile_pressed" from="Buttons" to="." method="_on_VBoxContainer_missile_pressed"]
[connection signal="pause_pressed" from="Buttons" to="." method="_on_Buttons_pause_pressed"]
[connection signal="shot_pressed" from="Buttons" to="." method="_on_VBoxContainer_shot_pressed"]
